--- a/header,-responsive-&-nav-styles.css
+++ b/header,-responsive-&-nav-styles.css
@@ -128,6 +128,7 @@ li.navdrop:hover{
     width: 100vw;
     height: auto;
     background-image: url(Images/background-image-for-home.jpg);
+background-size: contain;
     
 }
 .searchacc{
