--- a/header,-responsive-&-nav-styles.css
+++ b/header,-responsive-&-nav-styles.css
@@ -272,6 +272,7 @@ img#Account-button{
     #intro-text{
         width: 9em;
         margin: 0 auto 0 auto;
+font-size: 150%
     }
     #About{
         margin: 0 0 0.5em 0.1em;
