Changed the h1 and p tags in about to 100width
The About div is where the “What do we really do” statement is.

--- a/header,-responsive-&-nav-styles.css
+++ b/header,-responsive-&-nav-styles.css
@@ -277,6 +277,7 @@ font-size: 150%
     #About{
         margin: 0 0 0.5em 0.1em;
     }
+#About h1, p{width: 100%;}
     #ln {
         width: 100%;
     }
